Fix small profile picture on mobile

--- a/src/nyasuMail/other.css
+++ b/src/nyasuMail/other.css
@@ -233,4 +233,7 @@ body {
   .headerLink {
     display: none;
   }
+  #pfp {
+    width: 30%;
+  }
 }
